--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
 	<title>LX Reactor Winter Edition 2015</title>
 	<meta charset="UTF-8">
+	<meta property="og:site_name" content="LX Reactor Winter Edition 2015" />
+	<meta property="og:url"	content="http://lxreactor.com" />
+	<meta property="og:description" content="" />
+	<meta property="og:locale" content="pt_PT" />
+	<meta property="og:image" content="./img/logo.png" />
+	<meta property="article:author" content="https://www.facebook.com/hackerschoolist" />
 	<style type="text/css">
 		@import url(http://fonts.googleapis.com/css?family=Josefin+Sans);
 		@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
+		@import url(http://fonts.googleapis.com/css?family=Quicksand:300);
 
 		body {
 			background-color: rgba(80, 123, 173, 1); 
@@ -48,6 +55,9 @@
 
 		.text {
 			padding: 0px 100px;
+			font-size: 1.2em;
+			text-align: justify;
+			justify: inter-word;
 		}
 
 		#social {
@@ -115,6 +125,14 @@
 		a:active {
 			color: rgb(245, 245, 245);
 		}
+
+		#credit {
+			text-align: center;
+			font-family: "Quicksand", sans-serif;
+			font-size: 12px;
+			margin-top: 26px;
+		}
+
 	</style>
 
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -138,9 +156,10 @@
 				<img id="logo" src="./img/logo.png" />
 			</div>
 
+			<h2 style="width=100%;text-align:center;font-family:sans-serif;"><a href="lxreactor-2014">ver LX Reactor 2014</a></h2>
 			<div class="text">
 <!--				lorem ipsum dolor sit am cenas-->
-				<h2 style="width=100%;text-align:center;font-family:sans-serif;"><a href="lxreactor-2014">ver LX Reactor 2014</a></h2>
+
 			</div>
 		</div>
 
@@ -179,6 +198,10 @@
 				<a class="icon" href="https://vine.co/HackerSchool">
 					<i class="fa fa-vine"></i>
 				</a>
+			</div>
+
+			<div id="credit">
+				© HackerSchool
 			</div>
 		</div>
 	</div>
